RESOLVED FIXED49781
[GTK] fast/text/international tests are flaky on the bots
https://bugs.webkit.org/show_bug.cgi?id=49781
Summary [GTK] fast/text/international tests are flaky on the bots
Martin Robinson
Reported 2010-11-18 19:39:28 PST
Tests from fast/text/international fail inconsistently on the bots. Perhaps related we also see FontCache assertion failures such as this one: http://webkit-bots.igalia.com/amd64/svn_72340.core-when_1290124096-_-who_DumpRenderTree-_-why_11.trace.html .
Attachments
Patch for this issue (1.98 KB, patch)
2010-11-18 19:54 PST, Martin Robinson
dbates: review+
mrobinson: commit-queue+
Martin Robinson
Comment 1 2010-11-18 19:54:13 PST
Created attachment 74348 [details] Patch for this issue
Daniel Bates
Comment 2 2010-11-18 19:57:19 PST
Comment on attachment 74348 [details] Patch for this issue After talking with Martin about this issue and running layout tests repeatedly as a means to verify correctness, I feel that this patch is reasonable.
Martin Robinson
Comment 3 2010-11-19 10:03:07 PST
Note You need to log in before you can comment on or make changes to this bug.